--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -14,3 +14,20 @@ video {
   max-width: 100%;
   height: auto;
 }
+
+body {
+  width: 6.77966%;
+  float: left;
+  margin-right: -100%;
+  margin-left: 0;
+  clear: none;
+}
+@media (min-width: 650px) {
+  body {
+    width: 15.25424%;
+    float: left;
+    margin-right: -100%;
+    margin-left: 0;
+    clear: none;
+  }
+}
