--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -10,3 +10,11 @@
 $grids: 12;
 $gutters: 1/3;
 $grids: add-grid(6 at 600px);
+
+body {
+  @include grid-span(1, 1);
+
+  @include breakpoint(650px) {
+    @include grid-span(2, 1);
+  }
+}
