--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -19,7 +19,7 @@ body {
   width: 66.10169%;
   float: left;
   margin-right: -100%;
-  margin-left: 0;
+  margin-left: 8.47458%;
   clear: none;
 }
 @media (min-width: 650px) {
