--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -24,10 +24,10 @@ body {
 }
 @media (min-width: 650px) {
   body {
-    width: 66.10169%;
+    width: 49.15254%;
     float: left;
     margin-right: -100%;
-    margin-left: 0;
+    margin-left: 8.47458%;
     clear: none;
   }
 }
