--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -11,7 +11,7 @@ $grids: 12;
 $gutters: 1/3;
 $grids: add-grid(6 at 600px);
 
-body {
+main {
   @include grid-span(8, 2);
 
   @include breakpoint(650px) {
