--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -11,6 +11,14 @@ $grids: 12;
 $gutters: 1/3;
 $grids: add-grid(6 at 600px);
 
+header {
+  @include grid-span(12, 1);
+
+  @include breakpoint(650px) {
+    @include grid-span(6, 2);
+  }
+}
+
 main {
   @include grid-span(8, 2);
 
