--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -15,7 +15,7 @@ video {
   height: auto;
 }
 
-header {
+header[role=banner] {
   width: 100%;
   float: right;
   margin-left: 0;
@@ -23,7 +23,7 @@ header {
   clear: none;
 }
 @media (min-width: 650px) {
-  header {
+  header[role=banner] {
     width: 49.15254%;
     float: left;
     margin-right: -100%;
