--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -7,20 +7,24 @@
 // All box model properties go here
 ////////////////////////
 
+$tablet_p: 500px;
+$tablet_l: 700px;
+$desktop: 1100px;
 
 @include add-grid(3); // mobile
-@include add-grid(6 at 500px); // tablet portrait
-@include add-grid(12 at 700px); // tablet landscape
-@include add-grid(10 2 at 1100px); // desktop
+@include add-grid(6 at $tablet_p); // tablet portrait
+@include add-grid(12 at $tablet_l); // tablet landscape
+@include add-grid(10 2 at $desktop); // desktop
 
 @include add-gutter(.25);
-@include add-gutter(1/3 at 900px);
+@include add-gutter(1/3 at $desktop);
 
 header[role=banner] {
+  @include breakpoint($desktop);
   @include grid-span(12, 1);
-
 }
 
 main[role=main] {
+  @include breakpoint($desktop);
   @include grid-span(8, 2);
 }
