--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -24,17 +24,17 @@ header[role=banner] {
 }
 
 .panel-col-first {
-  width: 207.14286%;
+  width: 314.28571%;
   float: left;
   margin-right: -100%;
-  margin-left: 0;
+  margin-left: 107.14286%;
   clear: none;
 }
 
 .panel-col-last {
-  width: 207.14286%;
-  float: left;
-  margin-right: -100%;
-  margin-left: 214.28571%;
+  width: 100%;
+  float: right;
+  margin-left: 0;
+  margin-right: 0;
   clear: none;
 }
