--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -15,7 +15,7 @@ video {
   height: auto;
 }
 
-header[role=banner] {
+aurora-section-first {
   -sgs-span-settings: ("span": 12, "location": 1, "grid": 3, "gutter": 0.25, "style": "opposite", "start row": true, "end row": false, "fixed gutter": false, "split gutter": null, "gutter property": "margin", "options": (null: null));
   width: 421.42857%;
   float: left;
@@ -24,7 +24,7 @@ header[role=banner] {
   clear: none;
 }
 
-.panel-col-first {
+aurora-section-second {
   -sgs-span-settings: ("span": 1, "location": 4, "grid": 3, "gutter": 0.25, "style": "opposite", "start row": false, "end row": false, "fixed gutter": false, "split gutter": null, "gutter property": "margin", "options": (null: null));
   width: 28.57143%;
   float: left;
@@ -34,22 +34,22 @@ header[role=banner] {
   background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%22%3E%3Crect%20x%3D%220%25%22%20fill%3D%22blue%22%20width%3D%2228%2E57143%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2228%2E57143%25%22%20fill%3D%22%234040ff%22%20width%3D%227%2E14286%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2235%2E71429%25%22%20fill%3D%22blue%22%20width%3D%2228%2E57143%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2264%2E28571%25%22%20fill%3D%22%234040ff%22%20width%3D%227%2E14286%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2271%2E42857%25%22%20fill%3D%22blue%22%20width%3D%2228%2E57143%25%22%20height%3D%22100%25%22%2F%3E%3C%2Fsvg%3E");
 }
 @media (min-width: 500px) {
-  .panel-col-first {
+  aurora-section-second {
     background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%22%3E%3Crect%20x%3D%220%25%22%20fill%3D%22blue%22%20width%3D%2213%2E7931%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2213%2E7931%25%22%20fill%3D%22%234040ff%22%20width%3D%223%2E44828%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2217%2E24138%25%22%20fill%3D%22blue%22%20width%3D%2213%2E7931%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2231%2E03448%25%22%20fill%3D%22%234040ff%22%20width%3D%223%2E44828%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2234%2E48276%25%22%20fill%3D%22blue%22%20width%3D%2213%2E7931%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2248%2E27586%25%22%20fill%3D%22%234040ff%22%20width%3D%223%2E44828%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2251%2E72414%25%22%20fill%3D%22blue%22%20width%3D%2213%2E7931%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2265%2E51724%25%22%20fill%3D%22%234040ff%22%20width%3D%223%2E44828%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2268%2E96552%25%22%20fill%3D%22blue%22%20width%3D%2213%2E7931%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2282%2E75862%25%22%20fill%3D%22%234040ff%22%20width%3D%223%2E44828%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2286%2E2069%25%22%20fill%3D%22blue%22%20width%3D%2213%2E7931%25%22%20height%3D%22100%25%22%2F%3E%3C%2Fsvg%3E");
   }
 }
 @media (min-width: 700px) {
-  .panel-col-first {
+  aurora-section-second {
     background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%22%3E%3Crect%20x%3D%220%25%22%20fill%3D%22blue%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%226%2E77966%25%22%20fill%3D%22%234040ff%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%228%2E47458%25%22%20fill%3D%22blue%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2215%2E25424%25%22%20fill%3D%22%234040ff%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2216%2E94915%25%22%20fill%3D%22blue%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2223%2E72881%25%22%20fill%3D%22%234040ff%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2225%2E42373%25%22%20fill%3D%22blue%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2232%2E20339%25%22%20fill%3D%22%234040ff%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2233%2E89831%25%22%20fill%3D%22blue%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2240%2E67797%25%22%20fill%3D%22%234040ff%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2242%2E37288%25%22%20fill%3D%22blue%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2249%2E15254%25%22%20fill%3D%22%234040ff%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2250%2E84746%25%22%20fill%3D%22blue%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2257%2E62712%25%22%20fill%3D%22%234040ff%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2259%2E32203%25%22%20fill%3D%22blue%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2266%2E10169%25%22%20fill%3D%22%234040ff%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2267%2E79661%25%22%20fill%3D%22blue%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2274%2E57627%25%22%20fill%3D%22%234040ff%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2276%2E27119%25%22%20fill%3D%22blue%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2283%2E05085%25%22%20fill%3D%22%234040ff%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2284%2E74576%25%22%20fill%3D%22blue%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2291%2E52542%25%22%20fill%3D%22%234040ff%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2293%2E22034%25%22%20fill%3D%22blue%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3C%2Fsvg%3E");
   }
 }
 @media (min-width: 1100px) {
-  .panel-col-first {
+  aurora-section-second {
     background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%22%3E%3Crect%20x%3D%220%25%22%20fill%3D%22blue%22%20width%3D%2281%2E08108%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2281%2E08108%25%22%20fill%3D%22%234040ff%22%20width%3D%222%2E7027%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2283%2E78378%25%22%20fill%3D%22blue%22%20width%3D%2216%2E21622%25%22%20height%3D%22100%25%22%2F%3E%3C%2Fsvg%3E");
   }
 }
 
-.panel-col-last {
+aurora-section-third {
   -sgs-span-settings: ("span": 10, "location": 2, "grid": 3, "gutter": 0.25, "style": "opposite", "start row": false, "end row": false, "fixed gutter": false, "split gutter": null, "gutter property": "margin", "options": (null: null));
   width: 350%;
   float: left;
@@ -59,17 +59,17 @@ header[role=banner] {
   background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%22%3E%3Crect%20x%3D%220%25%22%20fill%3D%22yellow%22%20width%3D%2228%2E57143%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2228%2E57143%25%22%20fill%3D%22%23ffff40%22%20width%3D%227%2E14286%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2235%2E71429%25%22%20fill%3D%22yellow%22%20width%3D%2228%2E57143%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2264%2E28571%25%22%20fill%3D%22%23ffff40%22%20width%3D%227%2E14286%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2271%2E42857%25%22%20fill%3D%22yellow%22%20width%3D%2228%2E57143%25%22%20height%3D%22100%25%22%2F%3E%3C%2Fsvg%3E");
 }
 @media (min-width: 500px) {
-  .panel-col-last {
+  aurora-section-third {
     background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%22%3E%3Crect%20x%3D%220%25%22%20fill%3D%22yellow%22%20width%3D%2213%2E7931%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2213%2E7931%25%22%20fill%3D%22%23ffff40%22%20width%3D%223%2E44828%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2217%2E24138%25%22%20fill%3D%22yellow%22%20width%3D%2213%2E7931%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2231%2E03448%25%22%20fill%3D%22%23ffff40%22%20width%3D%223%2E44828%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2234%2E48276%25%22%20fill%3D%22yellow%22%20width%3D%2213%2E7931%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2248%2E27586%25%22%20fill%3D%22%23ffff40%22%20width%3D%223%2E44828%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2251%2E72414%25%22%20fill%3D%22yellow%22%20width%3D%2213%2E7931%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2265%2E51724%25%22%20fill%3D%22%23ffff40%22%20width%3D%223%2E44828%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2268%2E96552%25%22%20fill%3D%22yellow%22%20width%3D%2213%2E7931%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2282%2E75862%25%22%20fill%3D%22%23ffff40%22%20width%3D%223%2E44828%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2286%2E2069%25%22%20fill%3D%22yellow%22%20width%3D%2213%2E7931%25%22%20height%3D%22100%25%22%2F%3E%3C%2Fsvg%3E");
   }
 }
 @media (min-width: 700px) {
-  .panel-col-last {
+  aurora-section-third {
     background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%22%3E%3Crect%20x%3D%220%25%22%20fill%3D%22yellow%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%226%2E77966%25%22%20fill%3D%22%23ffff40%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%228%2E47458%25%22%20fill%3D%22yellow%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2215%2E25424%25%22%20fill%3D%22%23ffff40%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2216%2E94915%25%22%20fill%3D%22yellow%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2223%2E72881%25%22%20fill%3D%22%23ffff40%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2225%2E42373%25%22%20fill%3D%22yellow%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2232%2E20339%25%22%20fill%3D%22%23ffff40%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2233%2E89831%25%22%20fill%3D%22yellow%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2240%2E67797%25%22%20fill%3D%22%23ffff40%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2242%2E37288%25%22%20fill%3D%22yellow%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2249%2E15254%25%22%20fill%3D%22%23ffff40%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2250%2E84746%25%22%20fill%3D%22yellow%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2257%2E62712%25%22%20fill%3D%22%23ffff40%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2259%2E32203%25%22%20fill%3D%22yellow%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2266%2E10169%25%22%20fill%3D%22%23ffff40%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2267%2E79661%25%22%20fill%3D%22yellow%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2274%2E57627%25%22%20fill%3D%22%23ffff40%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2276%2E27119%25%22%20fill%3D%22yellow%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2283%2E05085%25%22%20fill%3D%22%23ffff40%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2284%2E74576%25%22%20fill%3D%22yellow%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2291%2E52542%25%22%20fill%3D%22%23ffff40%22%20width%3D%221%2E69492%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2293%2E22034%25%22%20fill%3D%22yellow%22%20width%3D%226%2E77966%25%22%20height%3D%22100%25%22%2F%3E%3C%2Fsvg%3E");
   }
 }
 @media (min-width: 1100px) {
-  .panel-col-last {
+  aurora-section-third {
     background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%22%3E%3Crect%20x%3D%220%25%22%20fill%3D%22yellow%22%20width%3D%2281%2E08108%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2281%2E08108%25%22%20fill%3D%22%23ffff40%22%20width%3D%222%2E7027%25%22%20height%3D%22100%25%22%2F%3E%3Crect%20x%3D%2283%2E78378%25%22%20fill%3D%22yellow%22%20width%3D%2216%2E21622%25%22%20height%3D%22100%25%22%2F%3E%3C%2Fsvg%3E");
   }
 }
