--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -16,7 +16,7 @@ $desktop: 1100px;
 @include add-grid(3); // mobile
 @include add-grid(6 at $tablet_p); // tablet portrait
 @include add-grid(12 at $tablet_l); // tablet landscape
-@include add-grid(10 2 at $desktop); // desktop
+@include add-grid(12 at $desktop); // desktop
 
 @include add-gutter(.25);
 @include add-gutter(1/3 at $desktop);
