--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -23,18 +23,20 @@ video {
   clear: none;
 }
 
-.aurora-section-second {
-  width: 207.14286%;
-  float: left;
-  margin-right: -100%;
-  margin-left: 0;
-  clear: none;
-}
-
 .aurora-section-third {
-  width: 207.14286%;
+  background: rgba(0, 0, 255, 0.3);
+  width: 100%;
   float: left;
   margin-right: -100%;
   margin-left: 321.42857%;
+  clear: none;
+}
+
+.aurora-section-second {
+  background: rgba(255, 255, 0, 0.5);
+  width: 314.28571%;
+  float: left;
+  margin-right: -100%;
+  margin-left: 0;
   clear: none;
 }
