--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -16,25 +16,25 @@ video {
 }
 
 .aurora-section-first {
-  width: 421.42857%;
-  float: left;
-  margin-right: -100%;
+  width: 100%;
+  float: right;
   margin-left: 0;
+  margin-right: 0;
   clear: none;
 }
 
 .aurora-section-third {
   background: rgba(0, 0, 255, 0.3);
-  width: 100%;
+  width: 23.72881%;
   float: left;
   margin-right: -100%;
-  margin-left: 321.42857%;
+  margin-left: 67.79661%;
   clear: none;
 }
 
 .aurora-section-second {
   background: rgba(255, 255, 0, 0.5);
-  width: 314.28571%;
+  width: 74.57627%;
   float: left;
   margin-right: -100%;
   margin-left: 0;
