--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -7,16 +7,16 @@
 // All box model properties go here
 ////////////////////////
 
-$tablet_p: 500px;
-$tablet_l: 700px;
+$tablet-p: 500px;
+$tablet-l: 700px;
 $desktop: 1100px;
 
-//@include add-grid(3); // mobile
-//@include add-grid(6 at $tablet_p); // tablet portrait
-//@include add-grid(12 at $tablet_l); // tablet landscape
-@include add-grid(12 at $desktop); // desktop
+@include add-grid(3); // mobile
+@include add-grid(6 at $tablet-p); // tablet portrait
+@include add-grid(12 at $tablet-l); // tablet landscape
+@include add-grid(10 2 at $desktop); // desktop
 
-//@include add-gutter(.25);
+@include add-gutter(.25);
 @include add-gutter(1/3 at $desktop);
 
 .aurora-section-first {
@@ -24,14 +24,14 @@ $desktop: 1100px;
   @include grid-span(12, 1);
 }
 
-.aurora-section-third {
-  background: rgba(blue, .3);
-  @include breakpoint($desktop);
-  @include grid-span(3, 9);
-}
-
 .aurora-section-second {
   background: rgba(yellow, .5);
   @include breakpoint($desktop);
   @include grid-span(9, 1);
+}
+
+.aurora-section-third {
+  background: rgba(blue, .3);
+  @include breakpoint($desktop);
+  @include grid-span(3, 9);
 }
