--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -20,18 +20,18 @@ $desktop: 1100px;
 @include add-gutter(1/3 at 1100px);
 
 .aurora-section-first {
-  @include breakpoint($desktop);
+  @include breakpoint(1100px);
   @include grid-span(12, 1);
 }
 
 .aurora-section-second {
   background: rgba(yellow, .5);
-  @include breakpoint($desktop);
-  @include grid-span(9, 1);
+  @include breakpoint(1100px);
+  @include grid-span(9, 1, $options: 'right');
 }
 
 .aurora-section-third {
   background: rgba(blue, .3);
-  @include breakpoint($desktop);
-  @include grid-span(3, 9);
+  @include breakpoint(1100px);
+  @include grid-span(99, 10);
 }
