--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -19,6 +19,10 @@ $desktop: 1100px;
 @include add-gutter(.25);
 @include add-gutter(1/3 at 1100px);
 
+body {
+  width:100%;
+}
+
 .aurora-section-first {
   @include breakpoint(1100px);
   @include grid-span(12, 1);
@@ -27,11 +31,11 @@ $desktop: 1100px;
 .aurora-section-second {
   background: rgba(yellow, .5);
   @include breakpoint(1100px);
-  @include grid-span(9, 1, $options: 'right');
+    @include grid-span(9, 1);
 }
 
 .aurora-section-third {
   background: rgba(blue, .3);
   @include breakpoint(1100px);
-  @include grid-span(99, 10);
+  @include grid-span(9, 3);
 }
