removing all other breakpoints

--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -22,16 +22,16 @@ video {
 }
 
 .aurora-section-first {
-  width: 421.42857%;
-  float: left;
-  margin-right: -100%;
+  width: 100%;
+  float: right;
   margin-left: 0;
+  margin-right: 0;
   clear: none;
 }
 
 .aurora-section-second {
   background: rgba(255, 255, 0, 0.5);
-  width: 314.28571%;
+  width: 74.57627%;
   float: left;
   margin-right: -100%;
   margin-left: 0;
@@ -40,9 +40,9 @@ video {
 
 .aurora-section-third {
   background: rgba(0, 0, 255, 0.3);
-  width: 314.28571%;
+  width: 74.57627%;
   float: left;
   margin-right: -100%;
-  margin-left: 71.42857%;
+  margin-left: 16.94915%;
   clear: none;
 }
