--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -11,10 +11,10 @@ $tablet-p: 500px;
 $tablet-l: 700px;
 $desktop: 1100px;
 
-@include add-grid(3); // mobile
-@include add-grid(6 at 500px); // tablet portrait
-@include add-grid(12 at  700px); // tablet landscape
-@include add-grid(10 2 at 1100px); // desktop
+//@include add-grid(3); // mobile
+//@include add-grid(6 at 500px); // tablet portrait
+//@include add-grid(12 at  700px); // tablet landscape
+@include add-grid(12 at 1100px); // desktop
 
 @include add-gutter(.25);
 @include add-gutter(1/3 at 1100px);
