--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -11,32 +11,32 @@ $tablet-p: 500px;
 $tablet-l: 700px;
 $desktop: 1100px;
 
-//@include add-grid(3); // mobile
-//@include add-grid(6 at 500px); // tablet portrait
-//@include add-grid(12 at  700px); // tablet landscape
-@include add-grid(12 at 1100px); // desktop
+@include add-grid(3); // mobile
+@include add-grid(6 at $tablet-p); // tablet portrait
+@include add-grid(12 at $tablet-l); // tablet landscape
+@include add-grid(12 at $desktop); // desktop
 
 @include add-gutter(.25);
-@include add-gutter(1/3 at 1100px);
+@include add-gutter(1/3 at $desktop);
 
 .aurora-sample-layout {
   @include clearfix;
 }
 
 .aurora-section-first {
-  @include breakpoint(1100px);
+  @include breakpoint($desktop);
   @include grid-span(12, 1);
 }
 
 .aurora-section-second {
   background: rgba(yellow, .5);
-  @include breakpoint(1100px);
+  @include breakpoint($desktop);
   @include grid-span(8, 1, $output-style: 'float');
   clear: both;
 }
 
 .aurora-section-third {
   background: rgba(blue, .3);
-  @include breakpoint(1100px);
+  @include breakpoint($desktop);
   @include grid-span(4, 9);
 }
