Adding header to the top of the front page

--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -10,3 +10,11 @@
 h1 {
   font-size: 48px;
 }
+
+.aurora-section-first {
+  background-image: url("http://benamer.com/sites/default/themes/benamer/img/benamercom-header.jpg");
+  
+}
+
+
+
