--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -105,3 +105,7 @@ video {
 h1 {
   font-size: 48px;
 }
+
+.aurora-section-first {
+  background-image: url("http://benamer.com/sites/default/themes/benamer/img/benamercom-header.jpg");
+}
