--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -12,9 +12,12 @@ h1 {
 }
 
 .aurora-section-first {
-  background-image: url("http://benamer.com/sites/default/themes/benamer/img/benamercom-header.jpg");
-  
+  background-image: url("../img/benamercom-header.jpg");
+  text-align: center;
+  color: white;
 }
+
+
 
 
 
