Removed float from section 2 and aligned the title to the right

--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -13,7 +13,7 @@ h1 {
 
 .aurora-section-first {
   background-image: url("../img/benamercom-header.jpg");
-  text-align: center;
+  text-align: right;
   color: white;
 }
 
