--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -60,10 +60,10 @@ video {
 @media (min-width: 1100px) {
   .aurora-section-second {
     width: 65.95745%;
-    clear: right;
     float: left;
+    margin-right: -100%;
     margin-left: 0;
-    margin-right: 2.12766%;
+    clear: none;
   }
 }
 
@@ -108,6 +108,6 @@ h1 {
 
 .aurora-section-first {
   background-image: url("../img/benamercom-header.jpg");
-  text-align: center;
+  text-align: right;
   color: white;
 }
