--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -23,13 +23,13 @@ $desktop: 1100px;
   @include clearfix;
 }
 
-.aurora-section-first {
+main.aurora-sample-layout .aurora-section-first {
   @include breakpoint($desktop) {
     @include grid-span(12, 1);
   }
 }
 
-.aurora-section-second {
+main.aurora-sample-layout .aurora-section-second {
   @include grid-span(2, 1);
 
   @include breakpoint($tablet-p) {
@@ -45,7 +45,7 @@ $desktop: 1100px;
   clear: both;
 }
 
-.aurora-section-third {
+main.aurora-sample-layout .aurora-section-third {
 
   @include grid-span(1, 3);
 
