--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -22,7 +22,30 @@ video {
 }
 
 main .aurora-section-first {
-  height: 100%;
+  width: 100%;
+  float: right;
+  margin-left: 0;
+  margin-right: 0;
+  clear: none;
+  height: 360px;
+}
+@media (min-width: 500px) {
+  main .aurora-section-first {
+    width: 100%;
+    float: right;
+    margin-left: 0;
+    margin-right: 0;
+    clear: none;
+  }
+}
+@media (min-width: 700px) {
+  main .aurora-section-first {
+    width: 100%;
+    float: right;
+    margin-left: 0;
+    margin-right: 0;
+    clear: none;
+  }
 }
 @media (min-width: 1100px) {
   main .aurora-section-first {
