--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -24,10 +24,18 @@ $desktop: 1100px;
 }
 
 main .aurora-section-first {
+  @include grid-span(3, 1);
+
+  @include breakpoint($tablet-p) {
+    @include grid-span(6, 1);
+  }
+  @include breakpoint($tablet-l) {
+    @include grid-span(12, 1);
+  }
   @include breakpoint($desktop) {
     @include grid-span(12, 1);
   }
-  height: 100%;
+  height: 360px;
 }
 
 main .aurora-section-second {
