--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -36,6 +36,7 @@ main .aurora-section-first {
     @include grid-span(12, 1);
   }
   height: 360px;
+  clear: both;
 }
 
 main .aurora-section-second {
