--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -17,6 +17,7 @@ $desktop: 1100px;
 @include add-grid(12 at $desktop); // desktop
 
 @include add-gutter(.25);
+@include add-gutter(1/3 at $tablet-l);
 @include add-gutter(1/3 at $desktop);
 
 .aurora-sample-layout {
