--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -33,28 +33,25 @@ main .aurora-section-first {
 @media (min-width: 500px) {
   main .aurora-section-first {
     width: 100%;
+    clear: right;
     float: right;
-    margin-left: 0;
     margin-right: 0;
-    clear: none;
   }
 }
 @media (min-width: 700px) {
   main .aurora-section-first {
     width: 100%;
+    clear: right;
     float: right;
-    margin-left: 0;
     margin-right: 0;
-    clear: none;
   }
 }
 @media (min-width: 1100px) {
   main .aurora-section-first {
     width: 100%;
+    clear: right;
     float: right;
-    margin-left: 0;
     margin-right: 0;
-    clear: none;
   }
 }
 
