--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -28,13 +28,13 @@ main .aurora-section-first {
   @include grid-span(3, 1);
 
   @include breakpoint($tablet-p) {
-    @include grid-span(6, 1);
+    @include grid-span(6, 1, $output-style: 'float');
   }
   @include breakpoint($tablet-l) {
-    @include grid-span(12, 1);
+    @include grid-span(12, 1, $output-style: 'float');
   }
   @include breakpoint($desktop) {
-    @include grid-span(12, 1);
+    @include grid-span(12, 1, $output-style: 'float');
   }
   height: 360px;
   clear: both;
