--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -33,17 +33,21 @@ main .aurora-section-first {
 @media (min-width: 500px) {
   main .aurora-section-first {
     width: 100%;
-    clear: right;
     float: right;
+    margin-left: 0;
     margin-right: 0;
+    clear: none;
+    clear: left;
   }
 }
 @media (min-width: 700px) {
   main .aurora-section-first {
     width: 100%;
-    clear: right;
     float: right;
+    margin-left: 0;
     margin-right: 0;
+    clear: none;
+    clear: left;
   }
 }
 @media (min-width: 1100px) {
@@ -127,7 +131,7 @@ main .aurora-section-third {
 }
 
 h1 {
-  font-size: 48px;
+  font-size: 3em;
 }
 
 .aurora-section-first {
