Adding margin to the site slogan block

--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -8,7 +8,7 @@
 ////////////////////////
 
 h1 {
-  font-size: 48px;
+  font-size: 3em;
 }
 
 .aurora-section-first {
@@ -21,6 +21,9 @@ h1 {
   margin-right:5%;
 }
 
+div .pane-blockify-blockify-site-slogan {
+  margin-top:18px;
+}
 
 
 
