--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -16,14 +16,37 @@ h1 {
   text-align: right;
   color: white;
 }
-
-.pane-block-1 {
-  margin-right:5%;
-}
-
+// test
 div .pane-blockify-blockify-site-slogan {
   margin-top:18px;
 }
 
+h1#site-title {
+  font-family: 'Lobster Two';
+  font-weight: 700;
+  text-align: center;
+  margin-top: -.125em;
+}
+
+
+ul li.leaf {
+  float: left;
+  border-right: 1px solid #e2e2e2;
+}
+
+.panel-pane.pane-block.pane-system-main-menu {
+  margin-top: -5em;
+}
+
+ul.menu {
+  border: none;
+  list-style: none;
+  text-align: left;
+  list-style-type: none;
+}
+
+h2{
+  font-family: 'Open Sans'; font-weight: 800;
+}
 
 
