--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -158,9 +158,21 @@ h1#site-title {
   margin-top: -.125em;
 }
 
+ul li.first.leaf {
+  float: left;
+  border-right: 1px solid #e2e2e2;
+  font-size: 1.25em;
+}
+
 ul li.leaf {
   float: left;
   border-right: 1px solid #e2e2e2;
+}
+
+ul li.last.leaf {
+  float: left;
+  border-right: 0px;
+  font-size: 1.25em;
 }
 
 .panel-pane.pane-block.pane-system-main-menu {
@@ -172,6 +184,18 @@ ul.menu {
   list-style: none;
   text-align: left;
   list-style-type: none;
+}
+
+ul li.first.leaf a:link {
+  color: whitesmoke;
+}
+
+ul li.leaf a:link {
+  color: whitesmoke;
+}
+
+ul li.last.leaf a:link {
+  color: whitesmoke;
 }
 
 h2 {
