--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -28,10 +28,21 @@ h1#site-title {
   margin-top: -.125em;
 }
 
+ul li.first.leaf {
+  float: left;
+  border-right: 1px solid #e2e2e2;
+  font-size: 1.25em;
+}
 
 ul li.leaf {
   float: left;
   border-right: 1px solid #e2e2e2;
+}
+
+ul li.last.leaf {
+  float: left;
+  border-right: 0px;
+  font-size: 1.25em;
 }
 
 .panel-pane.pane-block.pane-system-main-menu {
@@ -43,6 +54,17 @@ ul.menu {
   list-style: none;
   text-align: left;
   list-style-type: none;
+}
+
+ul li.first.leaf a:link{
+  color:whitesmoke
+}
+ul li.leaf a:link{
+  color:whitesmoke
+}
+
+ul li.last.leaf a:link{
+  color:whitesmoke
 }
 
 h2{
