--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -7,12 +7,9 @@
 // All styling, non box model properties go here
 ////////////////////////
 
-h1 {
-  font-size: 3em;
-}
 
 .aurora-section-first {
-  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../img/benamercom-header.jpg');
+  background:linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.25)), url("../img/benamercom-header.jpg");
   text-align: right;
   color: white;
 }
