--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -7,6 +7,7 @@
 // All box model properties go here
 ////////////////////////
 
+$mobile: 300px;
 $tablet-p: 500px;
 $tablet-l: 700px;
 $desktop: 1100px;
