--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -153,6 +153,11 @@ h1#site-title {
   text-align: center;
   margin-top: -.125em;
 }
+@media (min-width: 700px) {
+  h1#site-title {
+    text-align: right;
+  }
+}
 
 ul li.first.leaf {
   float: left;
@@ -161,33 +166,16 @@ ul li.first.leaf {
 }
 @media (min-width: 500px) {
   ul li.first.leaf {
-    width: 100%;
-    float: right;
-    margin-left: 0;
-    margin-right: 0;
-    clear: none;
     font-size: .85em;
   }
 }
 @media (min-width: 700px) {
   ul li.first.leaf {
-    width: 100%;
-    float: right;
-    margin-left: 0;
-    margin-right: 0;
-    clear: none;
-    clear: both;
     font-size: .85em;
   }
 }
 @media (min-width: 1100px) {
   ul li.first.leaf {
-    width: 100%;
-    float: right;
-    margin-left: 0;
-    margin-right: 0;
-    clear: none;
-    clear: both;
     font-size: 1.5em;
   }
 }
@@ -201,33 +189,16 @@ ul li.leaf {
 }
 @media (min-width: 500px) {
   ul li.leaf {
-    width: 100%;
-    float: right;
-    margin-left: 0;
-    margin-right: 0;
-    clear: none;
     font-size: .85em;
   }
 }
 @media (min-width: 700px) {
   ul li.leaf {
-    width: 100%;
-    float: right;
-    margin-left: 0;
-    margin-right: 0;
-    clear: none;
-    clear: both;
     font-size: .85em;
   }
 }
 @media (min-width: 1100px) {
   ul li.leaf {
-    width: 100%;
-    float: right;
-    margin-left: 0;
-    margin-right: 0;
-    clear: none;
-    clear: both;
     font-size: 1.5em;
   }
 }
@@ -235,31 +206,52 @@ ul li.leaf {
 ul li.last.leaf {
   float: left;
   border-right: 0px;
-  font-size: .5em;
+  font-size: .35em;
 }
 @media (min-width: 500px) {
   ul li.last.leaf {
-    width: 100%;
-    float: right;
-    margin-left: 0;
-    margin-right: 0;
-    clear: none;
     font-size: .85em;
   }
 }
 @media (min-width: 700px) {
   ul li.last.leaf {
-    width: 100%;
-    float: right;
-    margin-left: 0;
-    margin-right: 0;
-    clear: none;
-    clear: both;
     font-size: .85em;
   }
 }
 @media (min-width: 1100px) {
   ul li.last.leaf {
+    font-size: 1.5em;
+  }
+}
+
+.panel-pane.pane-block.pane-system-main-menu {
+  margin-top: -1em;
+}
+@media (min-width: 500px) {
+  .panel-pane.pane-block.pane-system-main-menu {
+    width: 100%;
+    float: right;
+    margin-left: 0;
+    margin-right: 0;
+    clear: none;
+    margin-top: -2.55em;
+    margin-left: -3em;
+    font-size: .85em;
+  }
+}
+@media (min-width: 700px) {
+  .panel-pane.pane-block.pane-system-main-menu {
+    width: 100%;
+    float: right;
+    margin-left: 0;
+    margin-right: 0;
+    clear: none;
+    margin-top: -2.75em;
+    font-size: .85em;
+  }
+}
+@media (min-width: 1100px) {
+  .panel-pane.pane-block.pane-system-main-menu {
     width: 100%;
     float: right;
     margin-left: 0;
@@ -268,10 +260,6 @@ ul li.last.leaf {
     clear: both;
     font-size: 1.5em;
   }
-}
-
-.panel-pane.pane-block.pane-system-main-menu {
-  margin-top: -5em;
 }
 
 ul.menu {
