--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -23,8 +23,16 @@ h1#site-title {
   font-weight: 700;
   text-align: center;
   margin-top: -.125em;
+  @include breakpoint($tablet-p) {
+    font-size: 3  em;
+  }
   @include breakpoint($tablet-l) {
-    text-align: right;
+    text-align: center;
+    font-size: 3em;
+  }
+  @include breakpoint($desktop) {
+    text-align: center;
+    font-size: 3em;
   }
 }
 
@@ -86,6 +94,7 @@ ul li.last.leaf {
   }
   @include breakpoint($tablet-l) {
     @include grid-span(12, 1);
+    width: 80%;
     margin-top: -2.75em;
     font-size: .85em;
   }
