--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -150,12 +150,15 @@ div .pane-blockify-blockify-site-slogan {
 h1#site-title {
   font-family: 'Lobster Two';
   font-weight: 700;
-  text-align: center;
+  text-align: right;
   margin-top: -.125em;
+  margin-right: 1em;
+  font-size: 2em;
 }
 @media (min-width: 760px) {
   h1#site-title {
-    font-size: 3  em;
+    text-align: center;
+    font-size: 3em;
   }
 }
 @media (min-width: 1000px) {
@@ -237,7 +240,8 @@ ul li.last.leaf {
 }
 
 .panel-pane.pane-block.pane-system-main-menu {
-  margin-top: -1em;
+  margin-top: -2em;
+  margin-left: -2em;
 }
 @media (min-width: 760px) {
   .panel-pane.pane-block.pane-system-main-menu {
@@ -246,9 +250,9 @@ ul li.last.leaf {
     margin-left: 0;
     margin-right: 0;
     clear: none;
-    margin-top: -2.55em;
+    margin-top: -3.25em;
     margin-left: -3em;
-    font-size: .85em;
+    font-size: 1.15em;
   }
 }
 @media (min-width: 1000px) {
@@ -259,8 +263,8 @@ ul li.last.leaf {
     margin-right: 0;
     clear: none;
     width: 80%;
-    margin-top: -2.75em;
-    font-size: .85em;
+    margin-top: -4.5em;
+    font-size: 1.15em;
   }
 }
 @media (min-width: 1100px) {
@@ -271,7 +275,8 @@ ul li.last.leaf {
     margin-right: 0;
     clear: none;
     clear: both;
-    font-size: 1.5em;
+    font-size: 1.15em;
+    margin-top: -5.5em;
   }
 }
 
