--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -8,17 +8,15 @@
 ////////////////////////
 
 $mobile: 300px;
-$tablet-p: 760px;
-$tablet-l: 1000px;
-$desktop: 1100px;
+$tablet: 600px;
+$desktop: 1020px;
 
 @include add-grid(3); // mobile
-@include add-grid(6 at $tablet-p); // tablet portrait
-@include add-grid(12 at $tablet-l); // tablet landscape
+@include add-grid(6 at $tablet); // tablet portrait
 @include add-grid(12 at $desktop); // desktop
 
-@include add-gutter(.25);
-@include add-gutter(1/3 at $tablet-l);
+@include add-gutter(1/3);
+@include add-gutter(1/3 at $tablet);
 @include add-gutter(1/3 at $desktop);
 
 .aurora-sample-layout {
@@ -30,17 +28,12 @@ main .aurora-section-first {
   height: 180px;
   clear: both;
 
-  @include breakpoint($tablet-p) {
+  @include breakpoint($tablet) {
     @include grid-span(6, 1);
     clear: both;
     height: 180px;
   }
-  @include breakpoint($tablet-l) {
-    @include grid-span(12, 1);
-    clear: both;
-    height: 360px;
 
-  }
   @include breakpoint($desktop) {
     @include grid-span(12, 1, $output-style: 'float');
     height: 360px;
@@ -51,15 +44,10 @@ main .aurora-section-first {
 main .aurora-section-second {
   @include grid-span(2, 1);
   clear: both;
-  @include breakpoint($tablet-p) {
+  @include breakpoint($tablet) {
     @include grid-span(4, 1);
     clear: both;
   }
-  @include breakpoint($tablet-l) {
-    @include grid-span(9, 1);
-    clear: both;
-  }
-
   @include breakpoint($desktop) {
     @include grid-span(8, 1, $output-style: 'float');
     clear: both;
@@ -71,12 +59,8 @@ main .aurora-section-third {
 
   @include grid-span(1, 3);
 
-  @include breakpoint($tablet-p) {
+  @include breakpoint($tablet) {
     @include grid-span(2, 5);
-  }
-
-  @include breakpoint($tablet-l) {
-    @include grid-span(3, 10);
   }
 
   @include breakpoint($desktop) {
